fix leaderboard scrollbar

--- a/front/app/globals.css
+++ b/front/app/globals.css
@@ -230,6 +230,13 @@
   position: relative;
 }
 
+@utility scrollbar-hide {
+  scrollbar-width: none;
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
+
 @media (min-width: 1024px) and (max-height: 900px) {
   .leaderboard {
  	width: 400px;
